@@ -661,7 +661,8 @@ int Game_window::drop_at_lift
 	Map_chunk *chunk = map->get_chunk(cx, cy);
 	int lift;			// Can we put it here?
 	Shape_info& info = to_drop->get_info();
-	int xtiles = info.get_3d_xtiles(), ytiles = info.get_3d_ytiles();
+	int frame = to_drop->get_framenum();
+	int xtiles = info.get_3d_xtiles(frame), ytiles = info.get_3d_ytiles(frame);
 	int max_drop, move_flags;
 	if (cheat.in_hack_mover())
 		{
